--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "musicnextjs",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@datastax/astra-db-ts": "^1.3.0",
+    "@huggingface/inference": "^2.7.0",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@tabler/icons-react": "^3.6.0",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
+    "ai": "^3.2.18",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "langchain": "^0.2.8",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
+    "openai": "^4.52.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
